--- a/www/index.html
+++ b/www/index.html
@@ -10,8 +10,8 @@
   <link rel="stylesheet" href="lib/onsenui/css/onsenui.css">
 
   <!-- Código Jquery -->
-  <script src="components/jquery-3.4.0.min.js"></script>
-  <script src="components/comandos.js"></script>
+  <script src="jquery-3.4.1.min.js"></script>
+  <script src="arquivo.js"></script>
 
   <link rel="stylesheet" href="components/loader.css">
 
