--- a/www/index.html
+++ b/www/index.html
@@ -24,10 +24,10 @@
 
 </head>
 <body>
-
+<div class="container">
   <header>
-    <label>Tire uma foto</label>
-    <button class="btn btn-block btnfoto" id="camera"><img src="img/foto.png for="rd_foto" width="50%" height="150"></button>
+    <h3>Tire uma foto</h3>
+    <button class="btn btn-block btnfoto" id="camera"><img src="img/foto.png"></button>
     <div class="botoes">
 
     <div class="row">
@@ -36,29 +36,19 @@
       </div>
     </div>
 
-    <div class="row">
-      <div class="col-xs-12" id="lat">
-        <h1>Latitude</h1>
+    <div class="latit">
+        <span>Latitude</span>
         <input type="" class="form-control" readonly id="latitude">
-      </div>
-
     </div>
-
-    <div class="row">
-      <div class="col-xs-12" id="long">
-        <h1>Longitude</h1>
+    <div class="longit">
+        <span>Longitude</span>
         <input type="" class="form-control" readonly id="longitude">
-      </div>
     </div>
-
   </header>
-
   <br>
-  <label>Sua Localização</label>
+  <span>Sua Localização</span>
   <br>
-  <div id="map"></div>
-
-  </div>
-
+    <div id="map"></div>
+</div>
 </body>
 </html>
